Handle add/update/delete selected dealer. Also fix some bug in the dealer choice box.